--- a/src/app/modules/recruitment/admin-dashboard/settings/settings.component.scss
+++ b/src/app/modules/recruitment/admin-dashboard/settings/settings.component.scss
@@ -2,6 +2,14 @@
   display: block;
 }
 
+// .scoreCardTitle:hover .focusAreaTitle {
+//   display: block;
+// }
+
+// .focusAreaTitle{
+//   display: none;
+// }
+
 .actions {
   display: none;
 }
