--- a/src/app/modules/recruitment/recruitment.component.html
+++ b/src/app/modules/recruitment/recruitment.component.html
@@ -1,3 +1,6 @@
-<ngx-single-column-layout>
+<ngx-customizable-column-layout [sideMenuToggle]="sideMenuToggle" >
   <router-outlet></router-outlet>
-</ngx-single-column-layout>
+</ngx-customizable-column-layout>
+<!-- <gx-customizableheader [menuToggle]="menuToggle">
+  <router-outlet></router-outlet>
+</gx-customizableheader> -->
