--- a/src/app/modules/recruitment/interviewerdashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/recruitment/interviewerdashboard/dashboard/dashboard.component.html
@@ -283,21 +283,29 @@
     </nb-card>
 
     </div>
-  <div class="col-xxxl-6 col-md-6" >
-    <nb-card>
-      <nb-card-header>
-        <div style="display: flex;flex-direction: row;justify-self: center;">
-          <div style="flex: auto;">
-            <div style="flex: auto;"><span class="header6-bold">Successful Applicants</span></div>
-      </div>
-        </div>
-      </nb-card-header>
-          <nb-card-body>
-            <!-- <chart type="pie" [data]="data" [options]="myPieOptions"></chart> -->
-          </nb-card-body>
-    </nb-card>
+    <div class="col-xxxl-6 col-md-6" >
 
-  </div>
+      <nb-card>
+        <nb-card-body>
+          <div style="display: flex;flex-direction: row;">
+            <div style="flex:auto">
+            <span class="header6-bold">Open Job roles by Department</span>
+            </div>
+            <div>
+              <nb-select selected="1">
+                <nb-option value="1">This year</nb-option>
+                <nb-option value="2">Option 2</nb-option>
+              </nb-select>
+            </div>
+            </div>
+            <div style="height: 18.75rem;width: 100%;">
+              <div echarts [options]="optionsForPie" class="echart" style="height: 100%;"></div>
+            </div>
+
+
+        </nb-card-body>
+      </nb-card>
+    </div>
 
 </div>
 
