updated modal for admin,interviewer and revruitmentsetting

--- a/src/app/components/employee-master-search/employee-master-search.component.html
+++ b/src/app/components/employee-master-search/employee-master-search.component.html
@@ -1,9 +1,6 @@
+
 <div>
-    <div style="display: inline-flex;">
-        <div *ngFor="let i of [1,2,3,4,5]">
-            <img style="width: 3rem; height: 3rem; border-radius: 50%; margin-left: -0.5rem;"  src="https://via.placeholder.com/300/09f.png/fff%20C/O%20https://placeholder.com/"/>
-        </div>
-    </div>
+    <ngx-employee-list></ngx-employee-list>
     <button (click)="showMasterSearchModal()" class="underlined-button">Edit</button>
 </div>
 
