--- a/src/app/components/side-modal/side-modal.component.html
+++ b/src/app/components/side-modal/side-modal.component.html
@@ -8,7 +8,7 @@
                 <ng-content select='[modal-header]'>
                 </ng-content>
             </div>
-            <div class="body">
+            <div class="body" style="overflow: scroll;">
                 <ng-content select='[modal-body]'></ng-content>
             </div>
             <div class="actions side-modal-actions">
