--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -461,4 +461,6 @@ opacity: 1;
   background: transparent;
   padding-left: 0.3rem;
   padding-right: 0.3rem;
+  background: transparent;
+  border: none;
 }
