--- a/src/app/modules/benefit/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/benefit/pages/dashboard/dashboard.component.html
@@ -6,6 +6,7 @@
     </div>
   </ngx-componentsheader>
 
+<div style="margin: 0.5rem;"></div>
 <div style="background-color: white; min-height: 10vh">
     <div class="row" style="padding-top: 1rem; padding-bottom: 1rem">
       <div class="col-sm-6">
@@ -121,6 +122,7 @@
       <button nbButton type="outline" status="primary" outline style="border: none;">View Breakdown</button>
     </div>
   </div>
+  <div style="margin: 0.5rem;"></div>
   <ngx-componentsheader
     pageName="Budget Items"
     [requiredButton]="topActionButtons"
