--- a/src/app/modules/benefit/pages/employee-view/employee-view.component.scss
+++ b/src/app/modules/benefit/pages/employee-view/employee-view.component.scss
@@ -82,3 +82,13 @@
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
 }
+
+h4{
+    font-size: 1.2rem;
+    color: #11141A;
+}
+
+h5{
+    font-size: 1rem;
+    color: #11141A;
+}
