--- a/src/app/components/tablecomponent/tablecomponent.component.scss
+++ b/src/app/components/tablecomponent/tablecomponent.component.scss
@@ -24,3 +24,15 @@ td, th{
     border: 1px solid black;
     cursor: pointer;
 }
+
+.table-2 thead{
+    background: transparent;
+    border: none;
+    text-align: left;
+    font: normal normal normal 16px/22px Rubik;
+    color: #86828D;
+}
+
+.table-2 *{
+    border: none;
+}
