--- a/src/app/modules/recruitment/admin-dashboard/jobs/jobs.component.scss
+++ b/src/app/modules/recruitment/admin-dashboard/jobs/jobs.component.scss
@@ -227,6 +227,11 @@ position: relative;
 
 }
 
+label {
+  font-size: 14px;
+}
+
+
 .profileName {
   font-family: Rubik;
   font-size: 24px;
@@ -381,7 +386,7 @@ position: relative;
  background-color: aliceblue;
   display: flex;
   flex-direction: column;
-  
+
   align-items: center;
   background-size: cover;
   justify-content: center center;
@@ -406,5 +411,5 @@ position: relative;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 1rem;
-    
+
 }
