--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -9,7 +9,7 @@
                   <p style="display: flex;flex-basis: 250px;flex-wrap: wrap;font-size: 1.25rem;width: 75%;color:#fff !important;">Providing real benefits that today's business require in their overall system</p>
                   </div>
                 </div>
-               
+                <!-- <a href="/assets/icons/Xcode_12.5_beta_2.xip" download="Xcode_12.5_beta_2.xip">Click here</a> -->
                 <div class="col-md-4 col-lg-4" style="padding: 1.25rem;">
                   <div style="padding: 1.25rem;width:100%;border-radius: 8px; background: #FFFFFF 0% 0% no-repeat padding-box;box-shadow: 0px 3px 25px #9E9EA61A;">
                     <div style="padding: 10px;"></div>
@@ -56,3 +56,4 @@
         </div>
     </div>
 </div>
+
