--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -26,7 +26,7 @@
       <nb-icon icon="bell-outline"></nb-icon>
     </nb-action>
     <nb-action class="user-action" *nbIsGranted="['view', 'user']" >
-      <nb-user [nbContextMenu]="userMenu"
+      <nb-user [nbPopover]="cardComponent"
                [name]="user?.name"
                [picture]="user?.picture" onlyPicture>
       </nb-user>
