--- a/src/app/modules/leave/leave-plan/leave-plan.component.html
+++ b/src/app/modules/leave/leave-plan/leave-plan.component.html
@@ -81,12 +81,12 @@
 <ngx-side-modal [(show)]='showLeavePlanModal' style="width: 500px; height: 1000px;">
     <div modal-header>Add New Leave Plan</div>
     <div modal-body>
-        <form action="">
+        <form id="leavePlan" name="leavePlan" #leavePlan="ngForm">
 
 
             <div class="form-group">
                 <label for="Employee Name" style="font-size: small;font-weight: bold;">Employee Name:</label>
-                <input type="text" class="form-control" placeholder="Enter Employee Name" id="Employee Name">
+               <ngx-employee-master-search [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
             </div>
 
             <div class="form-group">
@@ -107,14 +107,14 @@
                 <textarea class="form-control" placeholder="Enter Comment" id="Comment">Comment</textarea>
             </div>
 
-
+<!-- 
 
             <div class="d-flex-column">
                 <nb-checkbox (checkedChange)="toggle($event)">
                     <span>Allow rollover</span>
                 </nb-checkbox>
 
-            </div>
+            </div> -->
 
 
             <!--<label>Checked:</label> {{ checked }}-->
